# zscript

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  LICENSE  test.py  zscript.code-workspace
apps/memory_test/: CMakeLists.txt
apps/memory_test/src/: main.cpp  profiler.cpp  profiler.h
apps/zscript-dev/: CMakeLists.txt  tests.sh
apps/zscript-dev/src/: main.cpp
apps/zscript-tools/: CMakeLists.txt
apps/zscript-tools/resources/: Info.plist.in
apps/zscript-tools/src/: argparse.h  main.cpp  options.cpp
examples/example_01_package/: CMakeLists.txt
examples/example_01_package/src/: example_01.cpp
libs/zbase/: CMakeLists.txt
libs/zbase/include/zbase/: zbase.h
libs/zbase/src/crypto/: base64.cpp
libs/zbase/src/sys/: path.cpp
libs/zbase/tests/: CMakeLists.txt
libs/zbase/tests/src/: callable_object_tests.cpp  charconv_tests.cpp  compressed_pair_tests.cpp  error_code_tests.cpp  file_view_tests.cpp  main.cpp  path_tests.cpp  reference_counted_tests.cpp  scoped_tests.cpp  small_vector_tests.cpp  stack_string_tests.cpp  stack_tests.cpp  string_literal_tests.cpp  traits_tests.cpp  type_container_tests.cpp  unicode_tests.cpp  vector_tests.cpp
modules/zasync/: CMakeLists.txt
modules/zasync/include/zasync/: zasync.h
modules/zasync/libs/libuv/: CMakeLists.txt
modules/zasync/src/: asio.h  zasync.cpp  zasync_context.cpp  zasync_context.h
modules/zasync/src/asio/: any_completion_executor.h  any_completion_handler.h  any_io_executor.h  append.h  as_tuple.h  associator.h  (+119 more)
modules/zasync/tests/: CMakeLists.txt
modules/zaudio/: CMakeLists.txt
modules/zaudio/tests/: CMakeLists.txt
modules/ztest/: CMakeLists.txt
modules/ztest/src/: ztest.cpp
modules/ztest/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/libs/catch2/: .clang-format  CMakeLists.txt
tests/resources/: array_test_01.zs  bash_01.sh  geo.zs  module_01.zs  module_02.zs  property.zs  test_img_02.icns  test_img_02.tiff
tests/resources/subfolder/: module_01.zs
tests/resources/tests/: range_test_01.zs
tests/src/: array_tests.cpp  closure_compile_state_tests.cpp  copy_tests.cpp  delegate_tests.cpp  function_tests.cpp  if_tests.cpp  import_tests.cpp  main.cpp  number_delegate_tests.cpp  object_function_wrapper_tests.cpp  struct_tests.cpp  stuff_tests.cpp  table_tests.cpp  unit_tests.h  variable_declaration_tests.cpp
tests/src/arithmetic/: add_tests.cpp  compare_tests.cpp  exp_tests.cpp  triple_or.cpp  unary_tests.cpp
tests/src/examples/: vec3_tests.cpp
tests/src/std/: base64_tests.cpp  global_table_tests.cpp  math_tests.cpp  mutable_string_tests.cpp  path_tests.cpp  sys_tests.cpp
tests/src/zbase/: base64_tests.cpp  callable_object_tests.cpp  charconv_tests.cpp  compressed_pair_tests.cpp  error_code_tests.cpp  file_view_tests.cpp  math_tests.cpp  path_tests.cpp  ref_wrapper_tests.cpp  reference_counted_tests.cpp  scoped_tests.cpp  small_vector_tests.cpp  stack_string_tests.cpp  stack_tests.cpp  string_literal_tests.cpp  traits_tests.cpp  type_container_tests.cpp  unicode_tests.cpp  vector_tests.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/resources/: path.nut  utils.nut  wp.nut
tests/unit_tests/src/: engine_tests.cpp  instruction_tests.cpp  json_tests.cpp  main.cpp  memory_tests.cpp  native_closure_tests.cpp  object_stack_tests.cpp  parser_tests.cpp  samples_tests.cpp  script_tests.cpp  specification.cpp  subprocess.h  unit_tests.h  user_data_tests.cpp  vm_tests.cpp  zspec.h  ztests.h
tests/unit_tests/tests/: veclib_tests.nut  vm_tests.nut
tests/unit_tests2/: CMakeLists.txt
tests/unit_tests2/resources/: geo.zs  value_01.zs
tests/unit_tests2/src/: closure_compile_state_tests.cpp  import_tests.cpp  main.cpp  mutable_string_tests.cpp  native_pfunction_tests.cpp  object_function_wrapper_tests.cpp  path_tests.cpp  string_template.h  sys_tests.cpp  unit_tests.h
tests/zapp-tests/: CMakeLists.txt
tests/zapp-tests-cpp/: CMakeLists.txt
tests/zapp-tests-cpp/resources/: module_04.zs  test_01.zs
tests/zapp-tests-cpp/src/: main.cpp
tests/zapp-tests/resources/: geo.zs  module_03.zs
tests/zapp-tests/src/: main.c
tools/gendoc/: CMakeLists.txt
tools/gendoc/src/: main.cpp
zapplib/: CMakeLists.txt
zapplib/include/: zapp.h
zapplib/src/: zapplib.cpp
zapplib/tests/: CMakeLists.txt
zapplib/tests/src/: main.cpp  tests.cpp
zbase/tests/: CMakeLists.txt
zbase/tests/src/: base64_tests.cpp  callable_object_tests.cpp  charconv_tests.cpp  error_code_tests.cpp  math_tests.cpp  path_tests.cpp  ref_wrapper_tests.cpp  reference_counted_tests.cpp  scoped_tests.cpp  stack_string_tests.cpp  string_literal_tests.cpp  traits_tests.cpp  type_container_tests.cpp  unicode_tests.cpp  vector_tests.cpp
zscript/: CMakeLists.txt
zscript/include/: zscript.h
zscript/include/zscript/: common.h  engine.h  engine_holder.h  error.h  memory.h  object.h  object_base.h  object_type.h  types.h  vm.h  zscript.h
zscript/src/: engine.cpp  error.cpp  memory.cpp  zinclude.h  zinclude_guard.h  zscript.cpp  zvirtual_machine.cc  zvirtual_machine.h  zvm_ref.cc
zscript/src/core/: engine.cpp  error.cpp  memory.cpp  object.cpp  object_base.cpp  serializer.cpp
zscript/src/json/: zjson_lexer.h  zjson_parser.cc  zjson_parser.h
zscript/src/lang/: zcompiler.h  zinstruction.h  zinstruction_vector.cc  zinstruction_vector.h  zlexer.cc  zlexer.h  zopcode.h  zopcode_def.h  zparser.cpp  zparser.h  ztoken.h  ztoken_def.h
zscript/src/lib/: zgraphics.h  zlang.cc  zlang.h  zsbase64.cc  zsbase64.h  zslib.cc
zscript/src/object/: zfunction_prototype.cc  zfunction_prototype.h
zscript/src/objects/: zarray.cpp  zfunction_prototype.cc  zfunction_prototype.h  znative_closure.cpp  zstruct.cpp  zstruct_instance.cpp  ztable.cpp  zweak_ref.cpp
zscript/src/vm/: zvm_arithmetic.h  zvm_op.h  zvm_runtime.h  zvm_runtime_call.h  zvm_runtime_class.h  zvm_runtime_delegate.h  zvm_runtime_instance.h  zvm_runtime_struct.h  zvm_runtime_table.h  zvm_runtime_weak.h
zscript/src/xml/: zxml_lexer.h  zxml_parser.cc  zxml_parser.h  zxml_token.h  zxml_token_def.h
zscript/tests/unit_tests/: CMakeLists.txt
(+1531 files in other folders)
