cmake_minimum_required(VERSION 3.22.0)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY EXPORT_COMPILE_COMMANDS ON)
set_property(GLOBAL PROPERTY CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_XCODE_GENERATE_SCHEME ON)

set(ZSCRIPT_BIN_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set(ZSCRIPT_DOC_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/doc")
set(ZSCRIPT_TOOLS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tools")
set(ZSCRIPT_CMAKE_TOOLS_DIRECTORY "${ZSCRIPT_TOOLS_DIRECTORY}/cmake")
set(ZSCRIPT_MODULES_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/modules")
set(ZSCRIPT_EXAMPLES_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/doc/examples")
set(ZSCRIPT_INCLUDE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(ZSCRIPT_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src")

list(APPEND CMAKE_MODULE_PATH "${ZSCRIPT_CMAKE_TOOLS_DIRECTORY}")
include(zscript-utils)

# # Parse version file.
# set(WP_VERSION_FILE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/version.txt")
# wp_parse_version(${WP_VERSION_FILE_PATH})
project(zscript VERSION 0.0.1 LANGUAGES C CXX)

# message(STATUS "wp version: ${WP_VERSION_MAJOR}.${WP_VERSION_MINOR}.${WP_VERSION_PATCH}")
get_property(IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)

if(IS_MULTI_CONFIG)
  set(CMAKE_CONFIGURATION_TYPES "Debug;Release;RelWithDebInfo" CACHE STRING "" FORCE)
else()
  if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type" FORCE)
  endif()
endif()

# Check if ZScript is included as a subproject (via add_subdirectory)
# or if it is the main/primary project.
if(NOT DEFINED ZSCRIPT_MASTER_PROJECT)
  set(ZSCRIPT_MASTER_PROJECT OFF)

  if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
    set(ZSCRIPT_MASTER_PROJECT ON)
  endif()
endif()


add_sub_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/*)



set(ZSCRIPT_STATIC_LIB_NAME zscript)

file(GLOB_RECURSE ZSCRIPT_HEADER_FILES
  "${ZSCRIPT_INCLUDE_DIRECTORY}/*.h")

file(GLOB_RECURSE ZSCRIPT_SOURCE_FILES
  "${ZSCRIPT_SOURCE_DIRECTORY}/*.cpp"
  "${ZSCRIPT_SOURCE_DIRECTORY}/*.c"
  "${ZSCRIPT_SOURCE_DIRECTORY}/*.h"
  "${ZSCRIPT_SOURCE_DIRECTORY}/*.ipp")

source_group(TREE "${ZSCRIPT_INCLUDE_DIRECTORY}"
  PREFIX include
  FILES ${ZSCRIPT_HEADER_FILES})

source_group(TREE ${ZSCRIPT_SOURCE_DIRECTORY}
  PREFIX src
  FILES ${ZSCRIPT_SOURCE_FILES})

add_library(${ZSCRIPT_STATIC_LIB_NAME} STATIC
  ${ZSCRIPT_HEADER_FILES}
  ${ZSCRIPT_SOURCE_FILES})

set_target_properties(${ZSCRIPT_STATIC_LIB_NAME} PROPERTIES
  FOLDER zs
  XCODE_GENERATE_SCHEME NO)

# wp_set_compile_options(${ZSCRIPT_STATIC_LIB_NAME} PUBLIC)
target_compile_definitions(${ZSCRIPT_STATIC_LIB_NAME} PUBLIC
  -DZSCRIPT_STD_LIB_DIRECTORY="${ZSCRIPT_STD_LIB_DIRECTORY}")

target_include_directories(${ZSCRIPT_STATIC_LIB_NAME}
  PUBLIC
  "${ZSCRIPT_INCLUDE_DIRECTORY}"
  PRIVATE
  "${ZSCRIPT_SOURCE_DIRECTORY}"
)

if(APPLE)
  target_link_libraries(${ZSCRIPT_STATIC_LIB_NAME}
    PUBLIC
    "-framework CoreFoundation"
    "-framework Foundation"
    "-framework CoreGraphics"
    "-framework ImageIO"
  )

  target_compile_options(${ZSCRIPT_STATIC_LIB_NAME}
    PUBLIC
    "-fno-objc-arc")
endif()

target_link_libraries(${ZSCRIPT_STATIC_LIB_NAME} PRIVATE
  uv_a
)

# Output the library in ZSCRIPT_BIN_DIRECTORY.
set_target_properties(${ZSCRIPT_STATIC_LIB_NAME} PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${ZSCRIPT_BIN_DIRECTORY}"
  ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${ZSCRIPT_BIN_DIRECTORY}"
  ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${ZSCRIPT_BIN_DIRECTORY}"
  OUTPUT_NAME "zscript"
)

# Modules.
add_sub_directories(${CMAKE_CURRENT_SOURCE_DIR}/modules/*)

# Tests.
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)

# Apps.
add_sub_directories(${CMAKE_CURRENT_SOURCE_DIR}/apps/*)

# Install.
install(TARGETS zscript-app RUNTIME DESTINATION "/usr/local/bin")