cmake_minimum_required(VERSION 3.22.0)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY EXPORT_COMPILE_COMMANDS ON)
set_property(GLOBAL PROPERTY CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_XCODE_GENERATE_SCHEME ON)

set(ZSCRIPT_SAMPLES_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/samples)
set(ZSCRIPT_EXAMPLES_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/examples)
set(ZSCRIPT_DOC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/doc)
set(ZSCRIPT_TOOLS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tools)
set(ZSCRIPT_CMAKE_TOOLS_DIRECTORY ${ZSCRIPT_TOOLS_DIRECTORY}/cmake)
set(ZSCRIPT_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/zscript/include)
set(ZSCRIPT_SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/zscript/src)

list(APPEND CMAKE_MODULE_PATH "${ZSCRIPT_CMAKE_TOOLS_DIRECTORY}")
include(zscript-utils)
include(zscript-copyright)

# # Parse version file.
# set(WP_VERSION_FILE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/version.txt")
# wp_parse_version(${WP_VERSION_FILE_PATH})
project(zs
  VERSION 0.0.1
  LANGUAGES C CXX)

# message(STATUS "wp version: ${WP_VERSION_MAJOR}.${WP_VERSION_MINOR}.${WP_VERSION_PATCH}")
get_property(IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)

if(IS_MULTI_CONFIG)
  set(CMAKE_CONFIGURATION_TYPES "Debug;Release;RelWithDebInfo" CACHE STRING "" FORCE)
else()
  if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type" FORCE)
  endif()
endif()

# Determine if wp is built as a subproject (using add_subdirectory) or if it is
# the master project.
if(NOT DEFINED ZSCRIPT_MASTER_PROJECT)
  set(ZSCRIPT_MASTER_PROJECT OFF)

  if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
    set(ZSCRIPT_MASTER_PROJECT ON)
  endif()
endif()


add_sub_directories(${CMAKE_CURRENT_SOURCE_DIR}/deps/*)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/zbase)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/zscript)

add_sub_directories(${CMAKE_CURRENT_SOURCE_DIR}/apps/*)
