
set(TEST_NAME zscript-tests)
set(ZSCRIPT_UNIT_TESTS_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libs/catch2)

file(GLOB_RECURSE ZSCRIPT_UNIT_TESTS_SOURCE_FILES
  "${ZSCRIPT_UNIT_TESTS_SOURCE_DIRECTORY}/*.h"
  "${ZSCRIPT_UNIT_TESTS_SOURCE_DIRECTORY}/*.cpp"
)

file(GLOB_RECURSE ZSCRIPT_UNIT_TESTS_SPEC_SOURCE_FILES
  "${ZSCRIPT_UNIT_TESTS_SOURCE_DIRECTORY}/specification/sections/*.cpp"
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}"
  FILES
  ${ZSCRIPT_UNIT_TESTS_SOURCE_FILES}
)

add_executable(${TEST_NAME} ${ZSCRIPT_UNIT_TESTS_SOURCE_FILES})

target_link_libraries(${TEST_NAME} PUBLIC catch2)

set_target_properties(${TEST_NAME} PROPERTIES
  FOLDER tests
  XCODE_GENERATE_SCHEME YES
)

target_include_directories(${TEST_NAME}
  PUBLIC
  ${ZSCRIPT_UNIT_TESTS_SOURCE_DIRECTORY}
  ${ZSCRIPT_SOURCE_DIRECTORY}
)

target_link_libraries(${TEST_NAME}
  PUBLIC
  zscript
)

target_compile_definitions(${TEST_NAME}
  PUBLIC
  -DZSCRIPT_TESTS_RESOURCES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/resources"
  -DZSCRIPT_EXAMPLES_DIRECTORY="${ZSCRIPT_EXAMPLES_DIRECTORY}"
  -DZSCRIPT_TESTS_OUTPUT_DIRECTORY="${CMAKE_CURRENT_BINARY_DIR}"
  -DZSCRIPT_MODULES_DIRECTORY="${ZSCRIPT_MODULES_DIRECTORY}"
)
