
set(TEST_NAME zscript-memory-test)
set(ZSCRIPT_TEST_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src")

file(GLOB_RECURSE ZSCRIPT_TEST_SOURCE_FILES
  "${ZSCRIPT_TEST_SOURCE_DIRECTORY}/*.h"
  "${ZSCRIPT_TEST_SOURCE_DIRECTORY}/*.cpp"
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}"
  FILES
  ${ZSCRIPT_TEST_SOURCE_FILES})

add_executable(${TEST_NAME} ${ZSCRIPT_TEST_SOURCE_FILES})

# wp_add_test(${TEST_NAME})
set_target_properties(${TEST_NAME} PROPERTIES
  FOLDER tests
  XCODE_GENERATE_SCHEME YES)

target_include_directories(${TEST_NAME}
  PUBLIC
  ${ZSCRIPT_TEST_SOURCE_DIRECTORY})

target_link_libraries(${TEST_NAME}
  PUBLIC
  zscript)

target_compile_definitions(${TEST_NAME}
  PUBLIC
  -DZSCRIPT_TESTS_RESOURCES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/resources"
  -DZSCRIPT_STANDARD_TESTS_RESOURCES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/resources/standard"
  -DZSCRIPT_TESTS_SOURCES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/tests"
  -DZSCRIPT_SAMPLES_DIRECTORY="${ZSCRIPT_SAMPLES_DIRECTORY}")
