
set(APP_NAME zscript-dev)
set(ZSCRIPT_DEV_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src")

file(GLOB_RECURSE ZSCRIPT_DEV_SOURCE_FILES
  "${ZSCRIPT_DEV_SOURCE_DIRECTORY}/*.h"
  "${ZSCRIPT_DEV_SOURCE_DIRECTORY}/*.cpp"
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${ZSCRIPT_DEV_SOURCE_FILES})

add_executable(${APP_NAME} ${ZSCRIPT_DEV_SOURCE_FILES})

target_include_directories(${APP_NAME} PUBLIC ${ZSCRIPT_DEV_SOURCE_DIRECTORY} ${ZSCRIPT_SOURCE_DIRECTORY})

target_link_libraries(${APP_NAME} PUBLIC zscript)

set_target_properties(${APP_NAME} PROPERTIES
  XCODE_SCHEME_ARGUMENTS "${ZSCRIPT_EXAMPLES_DIRECTORY}/example_01.zs"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../output"
  RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/../../output"
  RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/../../output"
  FOLDER apps
  # PREFIX "../"
  OUTPUT_NAME "zscript")

# include(CTest)
# enable_testing()
# add_test(NAME MyTestBanana COMMAND ${APP_NAME} "${ZSCRIPT_EXAMPLES_DIRECTORY}/example_01.zs")