
set(MODULE_NAME zasync)
set(ZASYNC_INCLUDE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(ZASYNC_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src")


file(GLOB_RECURSE ZASYNC_HEADER_FILES
  "${ZASYNC_INCLUDE_DIRECTORY}/*.h"
)

file(GLOB_RECURSE ZASYNC_SOURCE_FILES
  "${ZASYNC_SOURCE_DIRECTORY}/*.cpp"
  "${ZASYNC_SOURCE_DIRECTORY}/*.h"
  "${ZASYNC_SOURCE_DIRECTORY}/*.ipp"
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}"
  FILES
  ${ZASYNC_HEADER_FILES}
  ${ZASYNC_SOURCE_FILES})

add_library(${MODULE_NAME} STATIC ${ZASYNC_HEADER_FILES} ${ZASYNC_SOURCE_FILES})

target_link_libraries(${MODULE_NAME} PUBLIC zscript uv_a)

set_target_properties(${MODULE_NAME} PROPERTIES
  FOLDER modules
  XCODE_GENERATE_SCHEME NO)

target_include_directories(${MODULE_NAME}
  PUBLIC
  ${ZASYNC_INCLUDE_DIRECTORY}
  PRIVATE
  ${ZASYNC_SOURCE_DIRECTORY}
  ${ZSCRIPT_SOURCE_DIRECTORY})


  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)