
set(MODULE_NAME zaudio)
set(ZAUDIO_INCLUDE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(ZAUDIO_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src")

file(GLOB_RECURSE ZAUDIO_HEADER_FILES
  "${ZAUDIO_INCLUDE_DIRECTORY}/*.h"
)

file(GLOB_RECURSE ZAUDIO_SOURCE_FILES
  "${ZAUDIO_SOURCE_DIRECTORY}/*.cpp"
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}"
  FILES
  ${ZAUDIO_HEADER_FILES}
  ${ZAUDIO_SOURCE_FILES})

add_library(${MODULE_NAME} STATIC ${ZAUDIO_HEADER_FILES} ${ZAUDIO_SOURCE_FILES})

target_link_libraries(${MODULE_NAME} PUBLIC zscript)

set_target_properties(${MODULE_NAME} PROPERTIES
  FOLDER modules
  XCODE_GENERATE_SCHEME NO)

target_include_directories(${MODULE_NAME}
  PUBLIC
  ${ZAUDIO_INCLUDE_DIRECTORY}
  PRIVATE
  ${ZAUDIO_SOURCE_DIRECTORY}
  ${ZSCRIPT_SOURCE_DIRECTORY})


  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)