
set(MODULE_NAME ztest)
set(ZTEST_INCLUDE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(ZTEST_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src")

file(GLOB_RECURSE ZTEST_HEADER_FILES
  "${ZTEST_INCLUDE_DIRECTORY}/*.h"
)

file(GLOB_RECURSE ZTEST_SOURCE_FILES
  "${ZTEST_SOURCE_DIRECTORY}/*.cpp"
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}"
  FILES
  ${ZTEST_HEADER_FILES}
  ${ZTEST_SOURCE_FILES})

add_library(${MODULE_NAME} STATIC ${ZTEST_HEADER_FILES} ${ZTEST_SOURCE_FILES})

target_link_libraries(${MODULE_NAME} PUBLIC zscript)

set_target_properties(${MODULE_NAME} PROPERTIES
  FOLDER modules
  XCODE_GENERATE_SCHEME NO)

target_include_directories(${MODULE_NAME}
  PUBLIC
  ${ZTEST_INCLUDE_DIRECTORY}
  PRIVATE
  ${ZTEST_SOURCE_DIRECTORY}
  ${ZSCRIPT_SOURCE_DIRECTORY})


add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)