
set(TEST_NAME zscript-tests2)
set(ZSCRIPT_TEST2_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src")

file(GLOB_RECURSE ZSCRIPT_TEST2_SOURCE_FILES
  "${ZSCRIPT_TEST2_SOURCE_DIRECTORY}/*.h"
  "${ZSCRIPT_TEST2_SOURCE_DIRECTORY}/*.cpp"
)

file(GLOB_RECURSE ZSCRIPT_TEST2_SPEC_SOURCE_FILES
  "${ZSCRIPT_TEST2_SOURCE_DIRECTORY}/specification/sections/*.cpp"
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}"
  FILES
  ${ZSCRIPT_TEST2_SOURCE_FILES})

add_executable(${TEST_NAME} ${ZSCRIPT_TEST2_SOURCE_FILES})

target_link_libraries(${TEST_NAME} PUBLIC catch2)

set_target_properties(${TEST_NAME} PROPERTIES
  FOLDER tests
  XCODE_GENERATE_SCHEME YES)

target_include_directories(${TEST_NAME}
  PUBLIC
  ${ZSCRIPT_TEST2_SOURCE_DIRECTORY}
  ${ZSCRIPT_SOURCE_DIRECTORY})

target_link_libraries(${TEST_NAME}
  PUBLIC
  zscript
  PRIVATE
  uv_a)

target_compile_definitions(${TEST_NAME}
  PUBLIC
  -DZSCRIPT_TESTS_RESOURCES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/resources"
  -DZSCRIPT_SAMPLES_DIRECTORY="${ZSCRIPT_SAMPLES_DIRECTORY}"
  -DZSCRIPT_EXAMPLES_DIRECTORY="${ZSCRIPT_EXAMPLES_DIRECTORY}"
  -DZSCRIPT_TESTS_OUTPUT_DIRECTORY="${CMAKE_CURRENT_BINARY_DIR}"
  -DZSCRIPT_MODULES_DIRECTORY="${ZSCRIPT_MODULES_DIRECTORY}"
  
)
