
set(TOOL_NAME zs-gendoc)
set(ZSCRIPT_TEST_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src")

file(GLOB_RECURSE ZSCRIPT_TEST_SOURCE_FILES
  "${ZSCRIPT_TEST_SOURCE_DIRECTORY}/*.h"
  "${ZSCRIPT_TEST_SOURCE_DIRECTORY}/*.cpp"
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${ZSCRIPT_TEST_SOURCE_FILES})

add_executable(${TOOL_NAME} ${ZSCRIPT_TEST_SOURCE_FILES})

# wp_add_test(${TOOL_NAME})
set_target_properties(${TOOL_NAME} PROPERTIES
  FOLDER tools
  XCODE_GENERATE_SCHEME YES)

# get_property(tmp GLOBAL PROPERTY WP_TEST_LIST)
# list(APPEND tmp ${TOOL_NAME})
# set_property(GLOBAL PROPERTY WP_TEST_LIST "${tmp}")

target_include_directories(${TOOL_NAME} PUBLIC ${ZSCRIPT_TEST_SOURCE_DIRECTORY} ${ZSCRIPT_SOURCE_DIRECTORY})

target_link_libraries(${TOOL_NAME} PUBLIC
  zscript)

target_compile_definitions(${TOOL_NAME} PUBLIC
  -DZSCRIPT_DOC_DIRECTORY="${ZSCRIPT_DOC_DIRECTORY}" )
