set(CATCH2_STATIC_LIB_NAME catch2)

set(CATCH2_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(CATCH2_SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB_RECURSE CATCH2_HEADER_FILES "${CATCH2_INCLUDE_DIRECTORY}/*.h")
file(GLOB_RECURSE CATCH2_SOURCE_FILES "${CATCH2_SOURCE_DIRECTORY}/*.cpp" "${CATCH2_SOURCE_DIRECTORY}/*.h")

source_group(TREE ${CATCH2_INCLUDE_DIRECTORY} PREFIX include FILES ${CATCH2_HEADER_FILES})
source_group(TREE ${CATCH2_SOURCE_DIRECTORY} PREFIX src FILES ${CATCH2_SOURCE_FILES})

add_library(${CATCH2_STATIC_LIB_NAME} STATIC ${CATCH2_HEADER_FILES} ${CATCH2_SOURCE_FILES})

target_include_directories(${CATCH2_STATIC_LIB_NAME} PUBLIC ${CATCH2_INCLUDE_DIRECTORY})

set_target_properties(${CATCH2_STATIC_LIB_NAME} PROPERTIES
  FOLDER zs/libs
  XCODE_GENERATE_SCHEME NO
)
