
set(TEST_NAME zscript-tests)
set(ZSCRIPT_TEST_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src")

file(GLOB_RECURSE ZSCRIPT_TEST_SOURCE_FILES
  "${ZSCRIPT_TEST_SOURCE_DIRECTORY}/*.h"
  "${ZSCRIPT_TEST_SOURCE_DIRECTORY}/*.cpp"
)

file(GLOB_RECURSE ZSCRIPT_TEST_SPEC_SOURCE_FILES
  "${ZSCRIPT_TEST_SOURCE_DIRECTORY}/specification/*.cpp"
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}"
  FILES
  ${ZSCRIPT_TEST_SOURCE_FILES})

add_executable(${TEST_NAME} ${ZSCRIPT_TEST_SOURCE_FILES})

# wp_add_test(${TEST_NAME})

target_link_libraries(${TEST_NAME} PUBLIC ztests)

  set_target_properties(${TEST_NAME} PROPERTIES
    FOLDER tests
    XCODE_GENERATE_SCHEME YES)

  # get_property(tmp GLOBAL PROPERTY WP_TEST_LIST)
  # list(APPEND tmp ${TEST_NAME})
  # set_property(GLOBAL PROPERTY WP_TEST_LIST "${tmp}")


target_include_directories(${TEST_NAME}
  PUBLIC
  ${ZSCRIPT_TEST_SOURCE_DIRECTORY}
  ${ZSCRIPT_SOURCE_DIRECTORY})

target_link_libraries(${TEST_NAME}
  PUBLIC
  zscript)

set_source_files_properties(${ZSCRIPT_TEST_SPEC_SOURCE_FILES}
  PROPERTIES HEADER_FILE_ONLY TRUE)

target_compile_definitions(${TEST_NAME}
  PUBLIC
  -DZSCRIPT_TESTS_RESOURCES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/resources"
  -DZSCRIPT_STANDARD_TESTS_RESOURCES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/resources/standard"
  -DZSCRIPT_TESTS_SOURCES_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/tests"
  -DZSCRIPT_SAMPLES_DIRECTORY="${ZSCRIPT_SAMPLES_DIRECTORY}"
  -DZSCRIPT_DOC_DIRECTORY="${ZSCRIPT_DOC_DIRECTORY}")
